CATS-1253 : fix for Ethiopian Calendar Selector

--- a/Web/Areas/Logistics/Views/WoredaStockDistribution/Create.cshtml
+++ b/Web/Areas/Logistics/Views/WoredaStockDistribution/Create.cshtml
@@ -770,9 +770,9 @@
 
             var value = event.newDateEthiopian == null ? "" : event.newDateEthiopian.toString();
 
-            e.model.set('DistributionStartDatePref', value);
+            e.model.set('DistributionEndDatePref', value);
 
-            SetModelStartDatePref(value);
+            SetModelEndDatePref(value);
 
 
         });
