fix for Regional request detail detail grid freezing

--- a/Web/Areas/EarlyWarning/Views/Request/Details.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Request/Details.cshtml
@@ -495,14 +495,7 @@
                           .Groupable()
                            .DataSource(dataSource => dataSource
         .Ajax()
-         .Model(model =>
-         {
-             foreach (System.Data.DataColumn column in Model.Columns)
-             {
-
-                 model.Field(column.ColumnName, column.DataType);
-             }
-         }).Read(read =>
+         .Read(read =>
 
     read.Action("StatusGeneric", "Configuration")
     )
