CATS-1314: workflow implementation continued

--- a/Web/Views/Shared/_Menu.cshtml
+++ b/Web/Views/Shared/_Menu.cshtml
@@ -322,13 +322,13 @@
                             <li>
                                 @Html.EarlyWarningOperationButton(
                         @Url.Action("Index", "GiftCertificate", new { id = 1 }),
-                        EarlyWarningConstants.Operation.View_Gift_Certificate_list, "Draft Gifts")
+                        EarlyWarningConstants.Operation.View_Gift_Certificate_list, "Gifts")
                             </li>
-                            <li>
+                            @*<li>
                                 @Html.EarlyWarningOperationButton(
                         @Url.Action("Index", "GiftCertificate", new { id = 2 }),
                         EarlyWarningConstants.Operation.View_Approved_Gift_Certificate, "Approved Gifts")
-                            </li>
+                            </li>*@
 
                         </ul>
                     </li>
