CATS-1212 issue has been modified.

--- a/Web/Areas/Hub/Views/ReceiveNew/Create.cshtml
+++ b/Web/Areas/Hub/Views/ReceiveNew/Create.cshtml
@@ -434,7 +434,7 @@
                             .ToolBar(toolbar =>
                             {
                                 toolbar.Create();
-                                toolbar.Save();
+                                //toolbar.Save();
                             })
                             .Editable(editable => editable.Mode(Kendo.Mvc.UI.GridEditMode.InCell))
                     .Pageable()
